k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tractionbuild
  labels:
    name: tractionbuild
    app: tractionbuild
    environment: production
