k8s/zerotoship-service-standalone.yaml
apiVersion: v1
kind: Service
metadata:
  name: zerotoship-service
spec:
  type: LoadBalancer
  selector:
    app: zerotoship
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8000
